test/official_tests/variable/undefined_local.lox
{
  print notDefined;  // error: {"line":2,"message":"Undefined variable 'notDefined'","type":"RuntimeError"}
}
